# nt-gist

./: .env.example  .gitignore  BUILD_LOG.md  Makefile  README.md  SUBMISSION.md  TECHNICAL_STATEMENT.md  run.sh
backend/: main.py  pyproject.toml
backend/support_context_budget_lab/: __init__.py  config.py  logging_config.py  session_manager.py
backend/support_context_budget_lab/agents/: __init__.py  baseline_agent.py  prompts.py  pruned_agent.py  search_policy.py
backend/support_context_budget_lab/api/: __init__.py  dependencies.py  routes.py  schemas.py
backend/support_context_budget_lab/llm/: __init__.py  nebius_client.py
backend/support_context_budget_lab/metrics/: __init__.py  cost.py  latency.py  metrics_models.py  session_stats.py  token_usage.py
backend/support_context_budget_lab/pruning/: __init__.py  context_pruner.py  evidence_ledger.py  retention_policy.py  support_memory.py
backend/support_context_budget_lab/reporting/: __init__.py  json_logger.py  markdown_report.py
backend/support_context_budget_lab/scenarios/: __init__.py  loader.py  telecom_support.yaml
backend/support_context_budget_lab/tools/: __init__.py  tavily_client.py
build-record/: README.md  key-prompts.md  session-summaries.md  traces-links.md  verification-log.md
frontend/: package-lock.json  package.json  tailwind.config.ts
logs/: .gitkeep  sample_session.json  session_20260701T060851.json  session_20260701T215948.json
reports/: .gitkeep  sample_report.md  session_20260701T060851.md  session_20260701T215948.md
tests/: conftest.py  test_agents.py  test_cost_metrics.py  (+10 more)
(+17 files in other folders)
