[project]
name = "support-context-budget-lab"
version = "0.1.0"
description = "UI-first A/B benchmark for context pruning in enterprise support agents (Tavily FDE)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.0.0",
    "langchain-nebius>=0.1.0",
    "langchain-tavily>=0.2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../tests"]
